1. 修复demo中读社保卡信息接口调用错误。2. 修复hex码编码错误.3添加部分log

--- a/Demo/dispenser.html
+++ b/Demo/dispenser.html
@@ -245,7 +245,7 @@
         function onReaderReadSSInfo() {
             var ido = document.getElementById("IdReaderId3");
             evenResu.value = "";
-            result.value = ocx.ReaderReadSSInfo(ido.value);
+            result.value = ocx.ReaderReadSSInfo(ido.value, 0);
         }
         // 复位
         function OnReset() {
